--- a/style.css
+++ b/style.css
@@ -3,27 +3,25 @@ body {
   padding: 0;
 }
 
+.main {
+  padding: 10px;
+  border: 1px solid  #ea5e48;
+}
+
 .first {
   width: 350px;
   background-color: #308dc0;
-  padding: 10px;
   margin: 20px 20px 40px 12px;
   box-sizing: border-box;
-  border: 1px solid  #ea5e48;
 }
 
 .second {
   width: auto;
   background-color: #ffa500;
   margin: auto;
-  padding: 10px;
-  border: 1px solid  #ea5e48;
-
 }
 
 p {
   background-color: #ddd;
   margin: auto;
-  padding: 10px;
-  border: 1px solid  #ea5e48;
 }
